# UMTYMP-Latex-Wiki

./: .gitignore  .readthedocs.yaml  README.md  build.dev.sh  pyproject.toml  setup.dev.sh
docs/: .readthedocs.yml  advanced.rst  conf.py  index.rst  interviews.rst  intro.rst  preface.rst  umtymp.rst
docs/_static/css/: custom.css
docs/source/: conf.py  index.rst  setup.rst  tips.rst
